<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/shortcut_settings" android:title="@string/settings" android:icon="@drawable/ae_icon_settings" android:iconTint="@color/colorAccent" />
    <item android:id="@+id/shortcut_add_to_home_screen" android:title="@string/add_to_home_screen" android:icon="@drawable/ae_icon_package" android:iconTint="@color/colorAccent" />
    <item android:id="@+id/shortcut_remove" android:title="@string/remove" android:icon="@drawable/ae_icon_remove" android:iconTint="@color/colorAccent" />
    <item android:id="@+id/shortcut_export" android:title="@string/export" android:icon="@drawable/ae_icon_export" android:iconTint="@color/colorAccent" />
    <item android:id="@+id/shortcut_clone_to_container" android:title="@string/clone" android:icon="@drawable/ae_icon_duplicate" android:iconTint="@color/colorAccent" />
    <item android:id="@+id/shortcut_properties" android:title="@string/properties" android:icon="@drawable/ae_icon_info" android:iconTint="@color/colorAccent" />
</menu>
